--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -8,7 +8,8 @@
 			"esnext"
 		],
 		"module": "esnext",
-		"jsx": "preserve"
+		"jsx": "preserve",
+		"baseUrl": "."
 	},
 	"include": [
 		"next-env.d.ts",
