feat:client: setup global styles & initial components

--- a/packages/client/.eslintrc
+++ b/packages/client/.eslintrc
@@ -43,12 +43,6 @@
 			"error",
 			"always"
 		],
-		"@typescript-eslint/explicit-function-return-type": [
-			"warn",
-			{
-				"allowExpressions": true,
-				"allowConciseArrowFunctionExpressionsStartingWithVoid": true
-			}
-		]
+		"@typescript-eslint/explicit-function-return-type": "off"
 	}
 }
