feat:client: integrate gql client

--- a/packages/client/.eslintrc
+++ b/packages/client/.eslintrc
@@ -27,6 +27,7 @@
 	"rules": {
 		"prettier/prettier": "error",
 		"react/react-in-jsx-scope": "off",
+		"@typescript-eslint/explicit-module-boundary-types": "off",
 		"indent": [
 			"error",
 			"tab"
@@ -43,6 +44,5 @@
 			"error",
 			"always"
 		],
-		"@typescript-eslint/explicit-function-return-type": "off"
 	}
 }
