--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,10 +10,12 @@
 	"dependencies": {
 		"@apollo/client": "^3.3.19",
 		"graphql": "^15.5.0",
+		"graphql-request": "^3.4.0",
 		"next": "10.2.3",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"sass": "^1.34.1"
+		"sass": "^1.34.1",
+		"zustand": "^3.5.2"
 	},
 	"devDependencies": {
 		"@types/react": "17.0.9",
