--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@prisma/client": "^2.24.1",
 		"fastify": "^3.17.0",
+		"fastify-cors": "^6.0.1",
 		"mercurius": "^7.7.0"
 	},
 	"devDependencies": {
