--- a/packages/client/.eslintrc
+++ b/packages/client/.eslintrc
@@ -29,7 +29,13 @@
 		"@typescript-eslint/explicit-module-boundary-types": "off",
 		"indent": [
 			"error",
-			"tab"
+			"tab",
+			{
+				"offsetTernaryExpressions": true,
+				"ignoredNodes": [
+					"ConditionalExpression > ObjectExpresstion"
+				]
+			}
 		],
 		"linebreak-style": [
 			"error",
