--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -5,10 +5,13 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"start": "next start"
+		"start": "next start",
+		"test": "jest --watch",
+		"test:ci": "jest --ci"
 	},
 	"dependencies": {
 		"@apollo/client": "^3.3.19",
+		"classnames": "^2.3.1",
 		"graphql": "^15.5.0",
 		"graphql-request": "^3.4.0",
 		"next": "10.2.3",
@@ -18,6 +21,9 @@
 		"zustand": "^3.5.2"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^5.13.0",
+		"@testing-library/react": "^11.2.7",
+		"@testing-library/react-hooks": "^7.0.0",
 		"@types/react": "17.0.9",
 		"@typescript-eslint/eslint-plugin": "^4.26.0",
 		"@typescript-eslint/parser": "^4.26.0",
@@ -27,7 +33,10 @@
 		"eslint-plugin-prettier": "^3.4.0",
 		"eslint-plugin-react": "^7.24.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
+		"identity-obj-proxy": "^3.0.0",
+		"jest": "^27.0.4",
 		"prettier": "^2.3.1",
+		"ts-jest": "^27.0.3",
 		"typescript": "4.3.2"
 	}
 }
