--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -21,12 +21,14 @@
 		"zustand": "^3.5.2"
 	},
 	"devDependencies": {
+		"@svgr/webpack": "^5.5.0",
 		"@testing-library/jest-dom": "^5.13.0",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/react-hooks": "^7.0.0",
 		"@types/react": "17.0.9",
 		"@typescript-eslint/eslint-plugin": "^4.26.0",
 		"@typescript-eslint/parser": "^4.26.0",
+		"babel-plugin-inline-react-svg": "^2.0.1",
 		"eslint": "^7.28.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-jsx-a11y": "^6.4.1",
