--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,6 +14,7 @@
 		"@prisma/client": "^2.24.1",
 		"fastify": "^3.17.0",
 		"fastify-cors": "^6.0.1",
+		"graphql-scalars": "^1.9.3",
 		"mercurius": "^7.7.0"
 	},
 	"devDependencies": {
